...
        <item>212;Western Sahara;EH / ESH</item>
        <item>967;Yemen;YE / YEM</item>
        <item>260;Zambia;ZM / ZMB</item>
        <item>263;Zimbabwe;ZW / ZWE</item>
    </string-array>

    <string name="invalid_phone_number">Wrong country code</string>
    <string name="invalid_phone_input">This does not seem to be a correct phone number</string>
    <string name="title_phone_number">Select your country</string>
    <string name="help_phone_number">Information</string>
    <string name="validate_phone_number">Validate</string>
    <string name="information_phone_number">We need your phone number retrieve your contacts.\n
        Each country has its own code number : if you don\'t know yours, you can have a look at countrycode.org.\n
        Don\'t worry, they are safe and we will not share or even use them.</string>

    <string name="invite_contact">Invite a contact</string>
    <string name="cost_contact">Do you want to open the SMS application to invite %s? It may imply some additional costs.</string>
    <string name="body_contact">Hi,\nI am using the Open GM app. It is so useful to manage groups. Tell me when you have your account!</string>
...
