<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/country_code_layout"
    android:weightSum="100">

    <ListView
        android:id="@+id/listView_coutrycodes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="65"
        android:choiceMode="singleChoice"
        android:padding="20dp" />

    <SearchView
        android:id="@+id/filterCodeCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/bluegreen"
        android:inputType="text"
        android:queryHint="Query here"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />
</LinearLayout>