<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:id="@+id/phone_adding_outmostLayout"
    tools:context="ch.epfl.sweng.opengm.identification.phoneNumber.PhoneAddingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_weight="40"
        android:weightSum="100">

        <EditText
            android:id="@+id/country_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="showCodeList"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <EditText
                android:id="@+id/country_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:inputType="phone"
                android:maxLines="1"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/input_phoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:layout_weight="70"
                android:inputType="phone"
                android:ellipsize="end"
                android:maxLines="1" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
