<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:opengm="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_phone_number_help"
        android:icon="@mipmap/ic_info_outline_white_24dp"
        android:title="@string/information_phone_number"
        opengm:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_phone_number_validate"
        android:icon="@mipmap/ic_done_white_24dp"
        android:title="@string/validate_phone_number"
        opengm:showAsAction="ifRoom" />

</menu>